# Euwe-chess-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.example.json  CompilerOptions.cmake  NOTICE  README.md  chess-engine.sln  ideas.txt  run-tournament.ps1  vcpkg.json
chess-engine/: CMakeLists.txt  Main.cpp  chess-engine.sln  chess-engine.vcxproj  chess-engine.vcxproj.filters
chess-engine-lib/: BitBoard.cpp  BitBoard.h  BoardConstants.h  BoardHash.cpp  BoardHash.h  BoardPosition.cpp  BoardPosition.h  CMakeLists.txt  ClangDiagnosticIgnore.h  ConsoleColor.cpp  ConsoleColor.h  Engine.cpp  Engine.h  Eval.cpp  Eval.h  EvalParams.cpp  EvalParams.h  EvalT.cpp  EvalT.h  FrontEndOption.cpp  FrontEndOption.h  GameState.cpp  GameState.h  GameStateStringOps.cpp  IEngine.h  IFrontEnd.h  Intrinsics.h  Macros.h  Math.h  Move.cpp  Move.h  MoveOrder.cpp  MoveOrder.h  MoveSearcher.cpp  MoveSearcher.h  MyAssert.h  PawnMasks.cpp  PawnMasks.h  Perft.cpp  Perft.h  (+21 more)
tests/: BitBoardTests.cpp  BoardPositionTests.cpp  CMakeLists.txt  EvalJacobiansTests.cpp  FenParsingTests.cpp  FrontEndOptionTests.cpp  GameStateHelpersTests.cpp  GameStateTests.cpp  HashingTests.cpp  MoveGenerationTests.cpp  MoveTests.cpp  MyGTest.h  PieceTests.cpp  SEETests.cpp  StackOfVectorsTests.cpp  cpp.hint  test.cpp  tests.vcxproj
tuner/: CMakeLists.txt  LoadPositions.cpp  LoadPositions.h  Main.cpp  Optimization.cpp  Optimization.h  PostProcessing.cpp  PostProcessing.h  PreProcessing.cpp  PreProcessing.h  ScoredPosition.h  Tuner.cpp  Utilities.h  export_annotated_fens_from_pgns.py  requirements.txt
